alignment fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1547,11 +1547,11 @@ input, select, textarea {
 .main-edu p {
 	margin-top: 0;
 	font-size: 0.7rem;
-	margin-bottom: 0;
+	margin-bottom: 0.2rem;
 }
 
 .main-edu h3 {
-	margin-bottom: 0.1rem;
+	margin-bottom: 0.05rem;
 }
 
 .side-by-side {
@@ -1580,8 +1580,7 @@ input, select, textarea {
 }
 
 .side-by-side h5 {
-	padding: 0;
-	margin: 0;
+	margin: 0.3rem;
 	line-height: 0.5;
 }
 
